# w3tel_internship_mail

./: Diamy_Mail_Demarrage_Maquette_Hugo.md  Diamy_Mail_Guide_Prise_En_Main_Stagiaire.md  README.md
Diamy_Mail_Corpus_12_07_26/: Diamy_Calendar_Cartes_v2_responsive.html  Diamy_Mail_ANNEX_A01_Inbound_Gateway_Frontier_v1_2.md  Diamy_Mail_ANNEX_A02_Storage_Envelope_Model_v1_1.md  Diamy_Mail_ANNEX_A03_Vault_Client_v1_2.md  Diamy_Mail_ANNEX_A04_Native_Sync_API_v1_3.md  Diamy_Mail_ANNEX_A05_Search_Local_AI_v1_1.md  Diamy_Mail_ANNEX_A06_Trust_Origin_v1_2.md  Diamy_Mail_ANNEX_A06_Trust_Origin_v1_3.md  Diamy_Mail_ANNEX_A07_Trust_Links_Attachments_v1_2.md  Diamy_Mail_ANNEX_A08_HTML_Tiptap_Conversion_v1_1.md  Diamy_Mail_ANNEX_A09_Rendering_Sandbox_v1_2.md  Diamy_Mail_ANNEX_A10_Outbound_Deliverability_v1_1.md  Diamy_Mail_ANNEX_A11_Domain_Onboarding_v1_1.md  Diamy_Mail_ANNEX_A12_Calendar_Core_Model_v1_3.md  Diamy_Mail_ANNEX_A13_Timezone_Engine_v1_2.md  Diamy_Mail_ANNEX_A14_iTIP_iMIP_Interop_v1_2.md  Diamy_Mail_ANNEX_A15_Free_Busy_v1_2.md  Diamy_Mail_ANNEX_A16_Message_Classification_v1_2.md  Diamy_Mail_ANNEX_A16_Message_Classification_v1_3.md  Diamy_Mail_ANNEX_A17_IAM_Integration_Contract_v1_5.md  Diamy_Mail_ANNEX_A18_Server_Implementation_Guide_v1_2.md  Diamy_Mail_ANNEX_A19_Client_SDK_Execution_Contract_v1_2.md  Diamy_Mail_ANNEX_A20_Bridge_v1_4.md  Diamy_Mail_ANNEX_A21_Storage_Schema_DDL_v1_4.md  Diamy_Mail_ANNEX_A21_Storage_Schema_DDL_v1_5.md  Diamy_Mail_ANNEX_A22_Health_Thresholds_v1_7.md  Diamy_Mail_ANNEX_A23_Outbound_Resource_Allocation_v1_1.md  Diamy_Mail_ANNEX_A24_Identity_Address_Normalization_v1_2.md  Diamy_Mail_ANNEX_A25_Architecture_Invariants_v1_3.md  Diamy_Mail_ANNEX_A26_Multi_Account_Client_v1_3.md  Diamy_Mail_ANNEX_A27_Shared_Resources_Delegation_v1_3.md  Diamy_Mail_ANNEX_A28_Presence_v1_0.md  Diamy_Mail_ANNEX_A29_Trust_UX_Sandbox_v1_0.md  Diamy_Mail_Architecture_v1_14.md
diamy-mail/: .gitignore  Cargo.toml  DEMO_GUIDE.md  README.md  SIMPLIFICATIONS.md  docker-compose.yml
diamy-mail/crates/diamy-addr/: Cargo.toml
diamy-mail/crates/diamy-addr/src/: lib.rs
diamy-mail/crates/diamy-mail-crypto/: Cargo.toml
diamy-mail/crates/diamy-mail-crypto/src/: dev_backend.rs  error.rs  lib.rs  messaging_backend.rs  newtypes.rs
diamy-mail/crates/diamy-mail-iam/: Cargo.toml
diamy-mail/crates/diamy-mail-iam/src/: lib.rs  mail_plane_token.rs
diamy-mail/crates/diamy-mail-iam/tests/: no_token_minting_in_repo.rs
diamy-mail/crates/diamy-mail-mime/: Cargo.toml
diamy-mail/crates/diamy-mail-mime/src/: lib.rs
diamy-mail/crates/diamy-mail-model/: Cargo.toml
diamy-mail/crates/diamy-mail-model/src/: lib.rs
diamy-mail/crates/diamy-mail-render/: Cargo.toml
diamy-mail/crates/diamy-mail-render/src/: lib.rs
diamy-mail/crates/diamy-mail-storage/: Cargo.toml
diamy-mail/crates/diamy-mail-storage/examples/: enroll_bridge_device.rs  enroll_test_device.rs  read_test_mail.rs  vertical_slice_demo.rs
diamy-mail/crates/diamy-mail-storage/migrations/: 0001_mail_core.sql  0002_keydir.sql  0003_hold_queue.sql  0004_hold_queue_key_only.sql  0005_journal_and_idempotency.sql
diamy-mail/crates/diamy-mail-storage/src/: lib.rs
diamy-mail/crates/diamy-obs/: Cargo.toml
diamy-mail/crates/diamy-obs/src/: audit.rs  lib.rs
diamy-mail/deploy/grafana/provisioning/dashboards/: dashboards.yml
diamy-mail/deploy/grafana/provisioning/dashboards/diamy-mail/: diamy-mail.json
diamy-mail/deploy/grafana/provisioning/datasources/: prometheus.yml
diamy-mail/deploy/prometheus/: prometheus.yml
diamy-mail/services/diamy-bridged/: Cargo.toml
diamy-mail/services/diamy-bridged/src/: main.rs
diamy-mail/services/diamy-maild/: Cargo.toml
diamy-mail/services/diamy-maild/src/: auth.rs  main.rs  sync_api.rs
diamy-mail/services/diamy-maild/tests/: no_keygen_in_binary.rs
diamy-mail/services/diamy-mxd/: Cargo.toml
diamy-mail/services/diamy-mxd/src/: main.rs
diamy-mail/services/diamy-submitd/: Cargo.toml
diamy-mail/services/diamy-submitd/src/: auth.rs  lib.rs  main.rs  relay.rs  submit_api.rs
diamy-mail/tests/fixtures/: dev_mail_plane_tokens.json
