[package]
name = "diamy-addr"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Normalisation canonique d'adresse (A24). UNE seule fonction, partagée serveur/client (INV-10)."

[dependencies]
thiserror.workspace = true
idna.workspace = true
unicode-normalization.workspace = true
base64.workspace = true
