[package]
name = "diamy-mail-iam"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Client de consommation Diamy IAM (A17). Ne réimplémente JAMAIS identité/session/clés (INV-9)."

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
jsonwebtoken = "9"
diamy-addr = { path = "../diamy-addr" }

[dev-dependencies]
# Lecture des jetons mail-plane PRÉ-SIGNÉS (tests/fixtures/dev_mail_plane_tokens.json) par les
# tests unitaires : ceux-ci VÉRIFIENT ces jetons, ils n'en fabriquent aucun. Aucune fonction
# d'émission de jeton n'existe dans ce crate (INV-9 / A17-P-1 : seul IAM émet des jetons) —
# d'où l'absence de tout feature "issuer" ; la capacité de signer un jeton a été RETIRÉE.
serde_json.workspace = true
