[package]
name = "diamy-mail-storage"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Stockage catalogue Postgres (A21, sous-ensemble) + object store de dev. Partagé par diamy-mxd et diamy-maild."

[dependencies]
diamy-mail-crypto = { path = "../diamy-mail-crypto" }
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Uniquement pour les exemples `enroll_test_device`/`read_test_mail` (simulent un
# CLIENT, jamais le serveur — A03/A04, tranche minimale). `dev-token-issuer` : uniquement
# pour que `read_test_mail` (un CLIENT de démo, pas `diamy-maild`) puisse présenter un
# jeton mail-plane à l'API de sync désormais authentifiée (A17-APPKEY-5) — jamais compilé
# dans le binaire serveur (voir `services/diamy-maild/Cargo.toml`).
diamy-mail-iam = { path = "../diamy-mail-iam", features = ["dev-token-issuer"] }
diamy-addr = { path = "../diamy-addr" }
tokio.workspace = true
base64.workspace = true
serde.workspace = true
reqwest.workspace = true
