[package]
name = "diamy-mail-storage"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Stockage catalogue Postgres (A21, sous-ensemble) + object store de dev. Partagé par diamy-mxd et diamy-maild."

[dependencies]
diamy-mail-crypto = { path = "../diamy-mail-crypto" }
diamy-obs = { path = "../diamy-obs" }   # sink d'audit distinct (INV-20, A18-LOG-3)
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
# Uniquement pour les exemples `enroll_test_device`/`read_test_mail` (simulent un CLIENT,
# jamais le serveur — A03/A04, tranche minimale). `read_test_mail` PRÉSENTE un jeton
# mail-plane à l'API de sync authentifiée (A17-APPKEY-5) : il le LIT dans la fixture
# pré-signée (tests/fixtures/dev_mail_plane_tokens.json), il ne le fabrique PAS — aucune
# fonction d'émission de jeton n'existe plus (INV-9 / A17-P-1).
diamy-mail-iam = { path = "../diamy-mail-iam" }
diamy-addr = { path = "../diamy-addr" }
diamy-mail-render = { path = "../diamy-mail-render" }
tokio.workspace = true
base64.workspace = true
serde.workspace = true
reqwest.workspace = true
