[package]
name = "diamy-bridged"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Bridge IMAP local minimal (A20) — façade de démo pour clients tiers (Thunderbird)."

[dependencies]
diamy-mail-crypto = { path = "../../crates/diamy-mail-crypto" }
diamy-mail-iam = { path = "../../crates/diamy-mail-iam" }
diamy-addr = { path = "../../crates/diamy-addr" }
diamy-obs = { path = "../../crates/diamy-obs" }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
