[package]
name = "diamy-maild"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Stockage + sync + annuaire de clés (A02, A04, A17). Ici : squelette + endpoint /metrics."

[dependencies]
diamy-mail-crypto = { path = "../../crates/diamy-mail-crypto" }
diamy-mail-storage = { path = "../../crates/diamy-mail-storage" }
diamy-mail-iam = { path = "../../crates/diamy-mail-iam" }
diamy-addr = { path = "../../crates/diamy-addr" }
diamy-obs = { path = "../../crates/diamy-obs" }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
axum.workspace = true
axum-server.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rcgen.workspace = true
rustls.workspace = true
sha2.workspace = true

[dev-dependencies]
# Tests d'intégration de l'API de sync (client HTTPS réel). Ils LISENT un jeton mail-plane
# pré-signé dans la fixture `tests/fixtures/dev_mail_plane_tokens.json` (jamais fabriqué —
# INV-9 / A17-P-1 : seul IAM émet des jetons). `diamy-mail-iam` et `serde_json` sont déjà en
# dépendances normales ci-dessus ; aucun feature "issuer" n'existe plus.
reqwest.workspace = true
