[package]
name = "diamy-submitd"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Envoi sortant : DKIM, rate limit, réputation (A10). Squelette."

[dependencies]
diamy-mail-crypto = { path = "../../crates/diamy-mail-crypto" }
diamy-obs = { path = "../../crates/diamy-obs" }
tracing.workspace = true
